loader restrict editing chat-overlap fix

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -35,7 +35,8 @@
     overflow: hidden;
     right: 0;
     bottom: 0;
-    position: absolute;
+    position: fixed;
+    z-index: 99;
     transition: all 0.5s;
     box-shadow: 0 10px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
